[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/MagicGirl.gd" type="Script" id=1]
[ext_resource path="res://sfx/noescape.wav" type="AudioStream" id=2]
[ext_resource path="res://sfx/reppuken.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/tooeasy.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/predictabo.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape" id=6]

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="CapsuleMesh" id=7]
radius = 0.5

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
albedo_color = Color( 1, 1, 0, 0.282353 )

[sub_resource type="ConvexPolygonShape" id=10]
points = PoolVector3Array( 0, 0, 0, 2, 0, 4, 1.4, 1.4, 4, 0, 2, 4, -1.4, 1.4, 4, -2, 0, 4, -1.4, -1.4, 4, 0, -2, 4, 1.4, -1.4, 4 )

[node name="MagicGirl" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Resources" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "noescape", "predictabo", "reppuken", "tooeasy" ), [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ) ] ]

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 6 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0 )
material_override = SubResource( 8 )
mesh = SubResource( 7 )
material/0 = null

[node name="PatrolTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="SightCone" type="CSGCylinder" parent="."]
transform = Transform( -4.37114e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, -1, 3.09086e-08, -3.09086e-08, 2, 1, -1.19209e-07 )
radius = 2.0
height = 4.0
cone = true
material = SubResource( 9 )

[node name="SightArea" type="Area" parent="SightCone"]
transform = Transform( 1, 0, 0, 0, -5.96046e-08, -1, 0, 1, -5.96046e-08, 0, 2, 1.78814e-07 )

[node name="CollisionShape" type="CollisionShape" parent="SightCone/SightArea"]
shape = SubResource( 10 )

[node name="Voice" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="SightCone/SightArea" to="." method="_on_SightArea_body_entered"]
[connection signal="body_exited" from="SightCone/SightArea" to="." method="_on_SightArea_body_exited"]
